--- a/src/app/button/button.component.less
+++ b/src/app/button/button.component.less
@@ -76,13 +76,13 @@
   &__small {
     width: 80px;
     height: 32px;
-    font-size: 11px;
+    font-size: 9px;
   }
 
   &__default {
     width: 100px;
     height: 40px;
-    font-size: 13px;
+    font-size: 12px;
   }
 
   &__large {
@@ -338,17 +338,14 @@
 
   &__small{
     font-size: 2px;
-    margin-right: 4px;
   }
 
   &__default{
     font-size: 3px;
-    margin-right: 7px;
   }
 
   &__large{
     font-size: 4px;
-    margin-right: 10px;
   }
 }
 
@@ -369,8 +366,10 @@
 
 .p-loading {
   margin: auto 5px;
+  //font-size: 80%;  // не работает
 }
 
 .p {
   margin: auto;
+  //font-size: 7px;  // не работает
 }
