--- a/src/app/checkbox-control-value-accessor/checkbox-control-value-accessor.component.less
+++ b/src/app/checkbox-control-value-accessor/checkbox-control-value-accessor.component.less
@@ -29,6 +29,7 @@
   width: 100%;
   padding: 0 4px;
   color: #1976d2;
+  font-weight: 900;
   //font-weight: 900; // Сами создаём галочку
   //content: '';
   //width: 16px;
