Новенький дропдаун, работает. Стили ещё не накладывала.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -308,7 +308,7 @@
       <div class="row">
         <div class="column">
           <div class="elem_center">
-            <app-dropdown [list]="listRole" [form]="roleForm"></app-dropdown>
+            <app-dropdown [list]="listRole" [form]="roleForm" firstText="Choose your role" ></app-dropdown>
           </div>
         </div>
         <div class="column">
