--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -308,14 +308,29 @@
       <div class="row">
         <div class="column">
           <div class="elem_center">
-            <app-dropdown [list]="listRole" [form]="roleForm" firstText="Choose your role" ></app-dropdown>
+            <app-dropdown [list]="listRole" [form]="roleForm" firstText="Choose your role"></app-dropdown>
           </div>
         </div>
         <div class="column">
-          <h3>Form Data</h3>
-          <pre>{{roleForm.value | json}}</pre>
+          <div class="elem_center">
+            <h3>Form Data</h3>
+            <pre>{{roleForm.value | json}}</pre>
+          </div>
         </div>
+      </div>
 
+      <div class="row dropdownRow">
+        <div class="column">
+          <div class="elem_center">
+            <app-dropbox-div [list]="listRole" [form]="divRoleForm" firstText="Выберите роль"></app-dropbox-div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="elem_center">
+            <h3>Form Data</h3>
+            <pre>{{divRoleForm.value | json}}</pre>
+          </div>
+        </div>
       </div>
 
       <div class="row">
