Закончила дропдаун с помощью дивов. Стили собственные, всё работает, проблем нет.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -302,7 +302,7 @@
       </div>
 
       <div class="row">
-        <h3 style="margin: auto">Dropbox</h3>
+        <h3 style="margin: auto">Dropbox with select</h3>
       </div>
 
       <div class="row">
@@ -317,6 +317,10 @@
             <pre>{{roleForm.value | json}}</pre>
           </div>
         </div>
+      </div>
+
+      <div class="row">
+        <h3 style="margin: auto">Dropbox only with divs</h3>
       </div>
 
       <div class="row dropdownRow">
