Закончила дропдаун с помощью дивов (папка dropbox-div). Стили собственные, всё работает, проблем нет.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -308,7 +308,7 @@
       <div class="row">
         <div class="column">
           <div class="elem_center">
-            <app-dropdown [list]="listRole" [form]="roleForm" firstText="Choose your role"></app-dropdown>
+            <app-dropdown [list]="listRole" [form]="roleForm" firstText="Choose your role" [disabled]="disabled"></app-dropdown>
           </div>
         </div>
         <div class="column">
@@ -326,7 +326,7 @@
       <div class="row dropdownRow">
         <div class="column">
           <div class="elem_center">
-            <app-dropbox-div [list]="listRole" [form]="divRoleForm" firstText="Выберите роль"></app-dropbox-div>
+            <app-dropbox-div [list]="listRole" [form]="divRoleForm" firstText="Выберите роль" [disabled]="disabled"></app-dropbox-div>
           </div>
         </div>
         <div class="column">
