--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -288,8 +288,8 @@
         <div class="column">
           <form [formGroup]="frm">
             <div *ngFor="let item of listRole">
-              <app-radio-button [id]="item.name" [frm]="frm" [label]="item.name" [value]="item.name" cn="selected_value"
-                                [disabled]="disabled" class="row"></app-radio-button>
+<!--              <app-radio-button [id]="item.name" [frm]="frm" [label]="item.name" [value]="item.name" cn="selected_value"-->
+<!--                                [disabled]="disabled" class="row"></app-radio-button>-->
             </div>
             <!--            <app-radio-button id="rc1" [frm]="frm" label="Yes" value="Yes" cn="selected_value"></app-radio-button>-->
             <!--            <app-radio-button id="rc2" [frm]="frm" label="No" value="No" cn="selected_value"></app-radio-button>-->
@@ -308,7 +308,7 @@
       <div class="row">
         <div class="column">
           <div class="elem_center">
-            <app-dropdown [list]="listRole" [form]="roleForm" firstText="Choose your role" [disabled]="disabled"></app-dropdown>
+<!--            <app-dropdown [list]="listRole" [form]="roleForm" firstText="Choose your role" [disabled]="disabled"></app-dropdown>-->
           </div>
         </div>
         <div class="column">
@@ -326,7 +326,7 @@
       <div class="row dropdownRow">
         <div class="column">
           <div class="elem_center">
-            <app-dropbox-div [list]="listRole" [form]="divRoleForm" firstText="Выберите роль" [disabled]="disabled"></app-dropbox-div>
+<!--            <app-dropbox-div [list]="listRole" [form]="divRoleForm" firstText="Выберите роль" [disabled]="disabled"></app-dropbox-div>-->
           </div>
         </div>
         <div class="column">
