--- a/src/app/checkbox-control-value-accessor/checkbox-control-value-accessor.component.html
+++ b/src/app/checkbox-control-value-accessor/checkbox-control-value-accessor.component.html
@@ -1,5 +1,4 @@
 <div class="checkbox-container" [class.disabled]="disabled">
-  <input type="checkbox" id="{{ controlID }}"
-         [checked]="checked" (change)="onChange($event)" />
-  <label for="{{ controlID }}" ></label>
+  <input type="checkbox" id="{{ controlId }}" [checked]="checked" (change)="onChange($event)" />
+  <label for="{{ controlId }}" ></label>
 </div>
