--- a/src/app/radio-button/radio-button.component.html
+++ b/src/app/radio-button/radio-button.component.html
@@ -1,8 +1,6 @@
-<div [formGroup]="frm" class="b-radio" [class.disabled]="disabled">
-  <label [for]="id">
-    <input [id]="id" type="radio" [value]="value" [formControlName]="cn" [checked]="frm.get(cn).value === value">
-    <span>
-      {{label}}
-    </span>
+<div class="b-radio" [class.disabled]="disabled">
+  <label>
+    <input type="radio" [value]="value">
+    <span>{{ label }}</span>
   </label>
 </div>
