--- a/src/app/dropbox-div/dropbox-div.component.html
+++ b/src/app/dropbox-div/dropbox-div.component.html
@@ -1,7 +1,7 @@
 <div class="dropdown" [class.disabled]="disabled">
-  <div>{{firstText}}</div>
-  <div class="dropdown__box" *ngIf="isSubmitted">
-    <div class="dropdown__field" *ngFor="let item of list" (click)="setValue($event, item.name)">{{item.name}}</div>
-  </div>
-  <button (click)="show()" class="dropdown__button">▼</button>
+    <div>{{firstText}}</div>
+    <div class="dropdownBox" *ngIf="isSubmitted" formControlName="divRoleName">
+      <div class="dropdownField" *ngFor="let item of list" on-click="setValue($event, item.name)">{{item.name}}</div>
+    </div>
+    <button (click)="show()" class="dropdownButton">▼</button>
 </div>
