--- a/src/app/dropdown-select/dropdown.component.html
+++ b/src/app/dropdown-select/dropdown.component.html
@@ -1,8 +1,8 @@
 <div>
   <label>
-    <select (change)="changeRole($event)" [formControl]="control">
-      <option value="">{{firstText}}&nbsp</option>
-      <option *ngFor="let item of list" [value]="item.name">{{item.name}}</option>
+    <select (change)="onChange($event)">
+      <option value="" >{{firstText}}&nbsp;</option>
+      <option *ngFor="let item of list" [id]="item.name" [value]="item.name" >{{item.name}}</option>
     </select>
   </label>
 </div>
