Починила dropDown-ы (базовый и кастомный). Осталось понять, что происходит с радиокнопками и навести  порядок в css.

--- a/src/app/dropdown-select/dropdown.component.html
+++ b/src/app/dropdown-select/dropdown.component.html
@@ -2,7 +2,7 @@
   <label>
     <select (change)="onChange($event)">
       <option value="" >{{firstText}}&nbsp;</option>
-      <option *ngFor="let item of list" [id]="item.name" [value]="item.name" >{{item.name}}</option>
+      <option *ngFor="let item of list" [attr.id]="item.name" [value]="item.name" >{{item.name}}</option>
     </select>
   </label>
 </div>
