--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,94 +8,94 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <html>
 <head>
-<style>
-  :host {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 14px;
-    color: #333;
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    margin: 8px 0;
-  }
-
-  p {
-    margin: 0;
-  }
-
-  .toolbar img {
-    margin: 0 16px;
-  }
-
-  .content {
-    display: flex;
-    margin: 50px auto 30px;
-    padding: 0 16px;
-    max-width: 960px;
-    flex-direction: column;
-    align-items: center;
-    height: 100000px;
-  }
-
-  .card svg.material-icons path {
-    fill: #888;
-  }
-
-  .card-container .card:not(.highlight-card):hover .material-icons path {
-    fill: rgb(105, 103, 103);
-  }
-
-  .card.card.highlight-card span {
-    margin-left: 60px;
-  }
-
-  a,
-  a:visited,
-  a:hover {
-    color: #1976d2;
-    text-decoration: none;
-  }
-
-  a:hover {
-    color: #125699;
-  }
-
-  .terminal pre {
-    font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
-    color: white;
-    padding: 0 1rem 1rem;
-    margin: 0;
-  }
-
-  footer {
-    margin-top: 8px;
-    display: flex;
-    align-items: center;
-    line-height: 20px;
-  }
-
-  footer a {
-    display: flex;
-    align-items: center;
-  }
-
-  /* Responsive Styles */
-  @media screen and (max-width: 767px) {
-
-    .card.highlight-card span {
-      margin-left: 72px;
+  <style>
+    :host {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-size: 14px;
+      color: #333;
+      box-sizing: border-box;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
     }
-  }
 
-</style>
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      margin: 8px 0;
+    }
+
+    p {
+      margin: 0;
+    }
+
+    .toolbar img {
+      margin: 0 16px;
+    }
+
+    .content {
+      display: flex;
+      margin: 50px auto 30px;
+      padding: 0 16px;
+      max-width: 960px;
+      flex-direction: column;
+      align-items: center;
+      height: 100000px;
+    }
+
+    .card svg.material-icons path {
+      fill: #888;
+    }
+
+    .card-container .card:not(.highlight-card):hover .material-icons path {
+      fill: rgb(105, 103, 103);
+    }
+
+    .card.card.highlight-card span {
+      margin-left: 60px;
+    }
+
+    a,
+    a:visited,
+    a:hover {
+      color: #1976d2;
+      text-decoration: none;
+    }
+
+    a:hover {
+      color: #125699;
+    }
+
+    .terminal pre {
+      font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
+      color: white;
+      padding: 0 1rem 1rem;
+      margin: 0;
+    }
+
+    footer {
+      margin-top: 8px;
+      display: flex;
+      align-items: center;
+      line-height: 20px;
+    }
+
+    footer a {
+      display: flex;
+      align-items: center;
+    }
+
+    /* Responsive Styles */
+    @media screen and (max-width: 767px) {
+
+      .card.highlight-card span {
+        margin-left: 72px;
+      }
+    }
+
+  </style>
 
   <title>My app</title>
 </head>
@@ -291,8 +291,7 @@
       <div class="row">
         <div class="column">
           <div *ngFor="let item of listRole" class="row">
-            <app-radio-button [id]="item.id" [formControl]="radioControl" [label]="item.name" [disabled]="disabled"
-                              [ngModel]="item.name"></app-radio-button>
+            <app-radio-button [id]="item.id" [formControl]="radioControl" [label]="item.name" [disabled]="disabled"></app-radio-button>
           </div>
         </div>
         <div class="column">
@@ -308,7 +307,8 @@
       <div class="row">
         <div class="column">
           <div class="elem_center">
-            <app-dropdown [list]="listRole" firstText="Choose your role" [formControl]="dropDownControl" [disabled]="disabled" ngDefaultControl></app-dropdown>
+            <app-dropdown [list]="listRole" firstText="Choose your role" [formControl]="dropDownControl"
+                          [disabled]="disabled"></app-dropdown>
           </div>
         </div>
         <div class="column">
@@ -326,13 +326,13 @@
       <div class="row dropdownRow">
         <div class="column">
           <div class="elem_center">
-            <!--<app-dropbox-div [list]="listRole" [form]="divRoleForm" firstText="Выберите роль" [disabled]="disabled"></app-dropbox-div>-->
+            <app-dropbox-div [list]="listRole" firstText="Выберите роль" [formControl]="dropDownControl" [disabled]="disabled" ></app-dropbox-div>
           </div>
         </div>
         <div class="column">
           <div class="elem_center">
             <h3>Form Data</h3>
-
+            <div>dropdown value = {{dropDownControl.value}}</div>
           </div>
         </div>
       </div>
