--- a/src/app/dropbox-div/dropbox-div.component.less
+++ b/src/app/dropbox-div/dropbox-div.component.less
@@ -10,38 +10,38 @@
   vertical-align: middle; // Справка: и делает текст расположенным вертикально по центру
   padding: 0 5px;
   box-sizing: border-box; // Справка: свойства width и height включают в себя значения полей и границ, но не отступов (margin)
-}
 
-.dropdownButton {
-  border: 1px solid transparent;
-  position: absolute;
-  right: 0;
-  height: 38px;
-  box-sizing: border-box; // Справка: свойства width и height включают в себя значения полей и границ, но не отступов (margin)
-
-  &:hover {
-    background-color: #d9d9d9;
+  &__box {
+    position: absolute;
+    top: 38px;
+    left: -1px;
+    border: 1px solid gray;
   }
-}
 
-.dropdownBox {
-  position: absolute;
-  top: 38px;
-  left: -1px;
-  border: 1px solid gray;
-}
+  &__field {
+    height: 40px;
+    width: 168px; // Справка: обязательное значение здесь
+    max-width: 170px;
+    align-items: center; // Справка: определяет вертикальное выравнивание всех дочерних элементов по центру родительского.
+    vertical-align: middle; // Справка: и делает текст расположенным вертикально по центру
+    box-sizing: border-box; // Справка: свойства width и height включают в себя значения полей и границ, но не отступов (margin)
+    padding: 10px;
 
-.dropdownField {
-  height: 40px;
-  width: 168px; // Справка: обязательное значение здесь
-  max-width: 170px;
-  align-items: center; // Справка: определяет вертикальное выравнивание всех дочерних элементов по центру родительского.
-  vertical-align: middle; // Справка: и делает текст расположенным вертикально по центру
-  box-sizing: border-box; // Справка: свойства width и height включают в себя значения полей и границ, но не отступов (margin)
-  padding: 10px;
+    &:hover {
+      background-color: #d9d9d9;
+    }
+  }
 
-  &:hover {
-    background-color: #d9d9d9;
+  button {
+    border: 1px solid transparent;
+    position: absolute;
+    right: 0;
+    height: 38px;
+    box-sizing: border-box; // Справка: свойства width и height включают в себя значения полей и границ, но не отступов (margin)
+
+    &:hover {
+      background-color: #d9d9d9;
+    }
   }
 }
 
@@ -54,13 +54,13 @@
     background-color: #bdbcbc;
     pointer-events: none;
   }
-}
 
-.disabled button {
-  cursor: not-allowed;
-  pointer-events: none;
-  background-color: #4e4e4e;
-  &:hover {
-    background-color:  #4e4e4e;
+  button {
+    cursor: not-allowed;
+    pointer-events: none;
+    background-color: #4e4e4e;
+    &:hover {
+      background-color:  #4e4e4e;
+    }
   }
 }
