--- a/src/app/checkbox-control-value-accessor/checkbox-control-value-accessor.component.less
+++ b/src/app/checkbox-control-value-accessor/checkbox-control-value-accessor.component.less
@@ -3,66 +3,66 @@
   width: 20px;
   height: 20px;
   position: relative;
-}
 
-.checkbox-container input[type="checkbox"] {
-  visibility: hidden;
-}
+  input[type="checkbox"] {
+    visibility: hidden;
 
-.checkbox-container label {
-  width: 18px;
-  height: 18px;
-  position: absolute;
-  top: 1px;
-  left: 1px;
-  background-color: white;
-  border: 1px solid gray;
-  box-shadow: inset 2px 2px 5px gray, 1px 1px 5px rgba(255, 255, 255, 1);
-}
+    &:checked + label::before {
+      /* Справка:
+      + поможет выбрать только тот элемент, который следует сразу же за указанным элементом
 
-.checkbox-container label::before {
-  /* Справка:
-  ::before создаёт псевдоэлемент,который является первым потомком выбранного элемента.
-  Часто используется для добавления косметического содержимого в элемент с помощью свойства content.
-  По умолчания является инлайновым. */
-  content: '✓';
-  width: 100%;
-  padding: 0 4px;
-  color: #1976d2;
-  font-weight: 900;
-  //font-weight: 900; // Сами создаём галочку
-  //content: '';
-  //width: 16px;
-  //height: 8px;
-  //border: 4px solid #000;
-  //position: absolute;
-  //border-top: none;
-  //border-right: none;
-  //transform: rotate(-50deg); //Информационная заметка: поворачивает элементы вокруг собственного центра
-  //top: 1px;
-  //left: 1px;
-  opacity: 0; // Справка: элемент прозрачный
-}
+      :checked находит любые элементы radio (<input type="radio">), checkbox (<input type="checkbox">) или option (<option> внутри <select>),
+      которые выбраны или включены. Пользователь может изменить это состояние, нажав на элемент, или выбрав другое значение,
+      в этом случае :checked повторно не применится к элементу, а сохранится
+       */
 
-.checkbox-container input[type="checkbox"]:checked + label::before {
-  /* Справка:
-  + поможет выбрать только тот элемент, который следует сразу же за указанным элементом
+      opacity: 1; // Справка: элемент непрозрачный
+    }
+  }
 
-  :checked находит любые элементы radio (<input type="radio">), checkbox (<input type="checkbox">) или option (<option> внутри <select>),
-  которые выбраны или включены. Пользователь может изменить это состояние, нажав на элемент, или выбрав другое значение,
-  в этом случае :checked повторно не применится к элементу, а сохранится
-   */
+  label {
+    width: 18px;
+    height: 18px;
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    background-color: white;
+    border: 1px solid gray;
+    box-shadow: inset 2px 2px 5px gray, 1px 1px 5px rgba(255, 255, 255, 1);
 
-  opacity: 1; // Справка: элемент непрозрачный
+    &::before {
+      /* Справка:
+      ::before создаёт псевдоэлемент,который является первым потомком выбранного элемента.
+      Часто используется для добавления косметического содержимого в элемент с помощью свойства content.
+      По умолчания является инлайновым. */
+      content: '✓';
+      width: 100%;
+      padding: 0 4px;
+      color: #1976d2;
+      font-weight: 900;
+      //font-weight: 900; // Сами создаём галочку
+      //content: '';
+      //width: 16px;
+      //height: 8px;
+      //border: 4px solid #000;
+      //position: absolute;
+      //border-top: none;
+      //border-right: none;
+      //transform: rotate(-50deg); //Информационная заметка: поворачивает элементы вокруг собственного центра
+      //top: 1px;
+      //left: 1px;
+      opacity: 0; // Справка: элемент прозрачный
+    }
+  }
 }
 
 .disabled {
   cursor: not-allowed; // Почему не работает (причём у моего первого чекбокса тоже не работает)?
   pointer-events: none; // Справка: запрещает мыши работу с элементом
-}
 
-.disabled label {
-  color: #4e4e4e; // Почему не заботает?
-  border: 1px solid #4e4e4e;
-  background-color: #bdbcbc;
+  label {
+    color: #4e4e4e; // Почему не заботает?
+    border: 1px solid #4e4e4e;
+    background-color: #bdbcbc;
+  }
 }
