--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -264,15 +264,9 @@
         <div class="column">
           <form #form="ngForm" (ngSubmit)="submit(form.value)">
             <div>
-              <app-checkbox-control-value-accessor name="value1" [(ngModel)]="valueCheckbox1"
-                                                   [disabled]="disabled"
-                                                   class="row"></app-checkbox-control-value-accessor>
-              <app-checkbox-control-value-accessor name="value2" [(ngModel)]="valueCheckbox2"
-                                                   [disabled]="disabled"
-                                                   class="row"></app-checkbox-control-value-accessor>
-              <app-checkbox-control-value-accessor [formControl]="checkbox3Control"
-                                                   [disabled]="disabled"
-                                                   class="row"></app-checkbox-control-value-accessor>
+              <app-checkbox-control-value-accessor name="value1" [(ngModel)]="valueCheckbox1" [disabled]="disabled" class="row"></app-checkbox-control-value-accessor>
+              <app-checkbox-control-value-accessor name="value2" [(ngModel)]="valueCheckbox2" [disabled]="disabled" class="row"></app-checkbox-control-value-accessor>
+              <app-checkbox-control-value-accessor [formControl]="checkbox3Control" [disabled]="disabled" class="row"></app-checkbox-control-value-accessor>
             </div>
           </form>
         </div>
