--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,8 +1,3 @@
 <div class="input" [class.disabled]="disabled">
-  <div
-    #input
-    contenteditable="true"
-    class="input__text"
-    (keydown)="stopEnter($event)"
-  ></div>
+  <div #input contenteditable="true" class="input__text" (keydown)="stopEnter($event)"></div>
 </div>
