--- a/src/app/radio-button/radio-button.component.less
+++ b/src/app/radio-button/radio-button.component.less
@@ -1,4 +1,5 @@
 .b-radio {
+
   label {
     display: inline-block;
 
@@ -70,4 +71,8 @@
       color: #4e4e4e; //content color
     }
   }
+}
+
+.radioBox {
+  margin: 10px;
 }
