--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -196,7 +196,7 @@
       </div>
 
       <div class="row">
-        <!-- кнопки со спиннером, НЕ МОГУ КОНТРОЛИРОВАТЬ ПОЛОЖЕНИЕ СПИНЕРА И РАЗМЕР ШРИФТА-->
+        <!-- кнопки со спиннером, НЕ МОГУ КОНТРОЛЛИРОВАТЬ ПОЛОЖЕНИЕ СПИНЕРА И РАЗМЕР ШРИФТА-->
         <div class="column">
           <div class="row">
             <div class="elem_center">
@@ -264,9 +264,12 @@
         <div class="column">
           <form #form="ngForm" (ngSubmit)="submit(form.value)">
             <div>
-              <app-checkbox-control-value-accessor name="value1" [(ngModel)]="valueCheckbox1" [disabled]="disabled" class="row"></app-checkbox-control-value-accessor>
-              <app-checkbox-control-value-accessor name="value2" [(ngModel)]="valueCheckbox2" [disabled]="disabled" class="row"></app-checkbox-control-value-accessor>
-              <app-checkbox-control-value-accessor [formControl]="checkbox3Control" [disabled]="disabled" class="row"></app-checkbox-control-value-accessor>
+              <app-checkbox-control-value-accessor name="value1" [(ngModel)]="valueCheckbox1" [disabled]="disabled"
+                                                   class="row"></app-checkbox-control-value-accessor>
+              <app-checkbox-control-value-accessor name="value2" [(ngModel)]="valueCheckbox2" [disabled]="disabled"
+                                                   class="row"></app-checkbox-control-value-accessor>
+              <app-checkbox-control-value-accessor [formControl]="checkbox3Control" [disabled]="disabled"
+                                                   class="row"></app-checkbox-control-value-accessor>
             </div>
           </form>
         </div>
@@ -284,10 +287,10 @@
 
       <div class="row">
         <div class="column">
-          <div *ngFor="let item of listRole" class="row">
-            <app-radio-button [attr.id]="item.id" [formControl]="radioControl" [label]="item.name" [disabled]="disabled"></app-radio-button>
-          </div>
+          <app-radio-button [list]="listRole" valueName="name" [formControl]="radioControl"
+                            [disabled]="disabled"></app-radio-button>
         </div>
+
         <div class="column">
           <h3>Form Data</h3>
           <div>radiobuttons value = {{ radioControl.value }}</div>
@@ -301,7 +304,8 @@
       <div class="row">
         <div class="column">
           <div class="elem_center">
-            <app-dropdown [list]="listRole" firstText="Choose your role" [formControl]="dropDownControl" [disabled]="disabled"></app-dropdown>
+            <app-dropdown [list]="listRole" firstText="Choose your role" [formControl]="dropDownControl"
+                          [disabled]="disabled"></app-dropdown>
           </div>
         </div>
         <div class="column">
@@ -319,7 +323,8 @@
       <div class="row dropdownRow">
         <div class="column">
           <div class="elem_center">
-            <app-dropbox-div [list]="listRole" firstText="Выберите роль" [formControl]="dropDownDivControl" [disabled]="disabled" ></app-dropbox-div>
+            <app-dropbox-div [list]="listRole" valueName="name" firstText="Выберите роль"
+                             [formControl]="dropDownDivControl" [disabled]="disabled"></app-dropbox-div>
           </div>
         </div>
         <div class="column">
