--- a/src/app/radio-button/radio-button.component.less
+++ b/src/app/radio-button/radio-button.component.less
@@ -12,6 +12,10 @@
         white-space: nowrap;
 
         &:before {
+          /* Справка:
+          :before создаёт псевдоэлемент,который является первым потомком выбранного элемента.
+          Часто используется для добавления косметического содержимого в элемент с помощью свойства content.
+          По умолчания является инлайновым. */
           content: '';
           position: absolute;
           top: 50%;
@@ -27,6 +31,13 @@
       }
 
       &:checked + span:before {
+        /* Справка:
+        + поможет выбрать только тот элемент, который следует сразу же за указанным элементом
+
+        :checked находит любые элементы radio (<input type="radio">), checkbox (<input type="checkbox">) или option (<option> внутри <select>),
+        которые выбраны или включены. Пользователь может изменить это состояние, нажав на элемент, или выбрав другое значение,
+        в этом случае :checked повторно не применится к элементу, а сохранится
+        */
         border-color: #1976d2;
         box-shadow: inset 2px 2px 5px #4198f8, 1px 1px 5px rgba(255, 255, 255, 1);
         content: '●';
