Починила радиокнопки, разобралась с установкой начального значения. Дропдаун завершён.

--- a/src/app/radio-button/radio-button.component.html
+++ b/src/app/radio-button/radio-button.component.html
@@ -7,7 +7,7 @@
                name="radio"
                [value]="item[valueName]"
                (change)="onChange($event)"
-               [checked]="isChecked()" >
+               [checked]="isChecked(item[valueName])" >
         <span>{{ item[valueName] }}</span>
       </label>
     </div>
